# server/src/modules/container/application/dtos/CreateContainerDTO.ts
@@ -1,4 +1,3 @@
-import type { ContainerCapabilities } from '@modules/container/domain/entities/ContainerCapabilities';
 import type { Container } from '@modules/container/domain/entities/Container';
 import type { ContainerEnvironmentVariable, ContainerPortMapping } from '@modules/container/domain/port/IContainerService';
 
@@ -17,7 +16,6 @@ export interface CreateContainerInputDTO {
     cpus?: number;
     mountDockerSocket?: boolean;
     useImageCmd?: boolean;
-    capabilities?: ContainerCapabilities;
 };
 
 export interface CreateContainerOutputDTO {
